@@ -8,18 +8,15 @@ import com.bifos.accountbook.application.exception.ErrorCode;
 import com.bifos.accountbook.domain.entity.Family;
 import com.bifos.accountbook.domain.entity.FamilyMember;
 import com.bifos.accountbook.domain.entity.User;
-import com.bifos.accountbook.domain.repository.CategoryRepository;
-import com.bifos.accountbook.domain.repository.ExpenseRepository;
 import com.bifos.accountbook.domain.repository.FamilyMemberRepository;
 import com.bifos.accountbook.domain.repository.FamilyRepository;
 import com.bifos.accountbook.domain.value.CustomUuid;
+import com.bifos.accountbook.domain.value.FamilyMemberRole;
 import com.bifos.accountbook.presentation.annotation.FamilyUuid;
 import com.bifos.accountbook.presentation.annotation.UserUuid;
 import com.bifos.accountbook.presentation.annotation.ValidateFamilyAccess;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -28,6 +25,7 @@ import org.springframework.transaction.annotation.Transactional;
 @Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class FamilyService {
 
   private final FamilyRepository familyRepository;
@@ -36,8 +34,6 @@ public class FamilyService {
   private final CategoryService categoryService;
   private final FamilyValidationService familyValidationService;
   private final UserProfileService userProfileService;
-  private final ExpenseRepository expenseRepository;
-  private final CategoryRepository categoryRepository;
 
   /**
    * 가족 생성 (생성자를 owner로 자동 추가 + 기본 카테고리 생성)
@@ -60,7 +56,7 @@ public class FamilyService {
     FamilyMember member = FamilyMember.builder()
                                       .familyUuid(family.getUuid())
                                       .userUuid(user.getUuid())
-                                      .role("owner")
+                                      .role(FamilyMemberRole.OWNER)
                                       .build();
 
     familyMemberRepository.save(member);
@@ -81,37 +77,19 @@ public class FamilyService {
   /**
    * 사용자가 속한 가족 목록 조회
    */
-  @Transactional(readOnly = true)
   public List<FamilyResponse> getUserFamilies(CustomUuid userUuid) {
     User user = userService.getUser(userUuid);
 
-    // 사용자가 속한 가족 멤버십 조회
-    List<FamilyMember> memberships = familyMemberRepository.findAllByUserUuid(user.getUuid());
-
-    // 가족 정보 조회 (memberCount, expenseCount, categoryCount 포함)
-    return memberships.stream()
-                      .map(FamilyMember::getFamilyUuid)
-                      .map(familyUuid -> {
-                        Family family = familyRepository.findActiveByUuid(familyUuid).orElse(null);
-                        if (family == null) {
-                          return null;
-                        }
-
-                        int memberCount = familyMemberRepository.countByFamilyUuid(familyUuid);
-                        int expenseCount = expenseRepository.countByFamilyUuid(familyUuid);
-                        int categoryCount = categoryRepository.countByFamilyUuid(familyUuid);
-
-                        return FamilyResponse.fromWithCounts(family, memberCount, expenseCount, categoryCount);
-                      })
-                      .filter(Objects::nonNull)
-                      .collect(Collectors.toList());
+    return familyRepository.findFamiliesWithCountsByUserUuid(user.getUuid())
+                            .stream()
+                            .map(FamilyResponse::fromProjection)
+                            .toList();
   }
 
   /**
    * 가족 상세 조회
    */
   @ValidateFamilyAccess
-  @Transactional(readOnly = true)
   public FamilyResponse getFamily(@UserUuid CustomUuid userUuid, @FamilyUuid CustomUuid familyUuid) {
     Family family = familyRepository.findActiveByUuid(familyUuid)
                                     .orElseThrow(() -> new BusinessException(ErrorCode.FAMILY_NOT_FOUND)
